created the first route and started the server

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A full fledged ecommerce website built with node, express, typescript, prisma and a lot more",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
+    "start": "node server.js",
     "dev:tsc": "tsc --watch -p .",
-    "dev:serve": "NODE_ENV=development nodemon -e js -w dist dist/server.js",
+    "dev:serve": "nodemon -e js -w dist dist/server.js",
     "dev": "nodemon . --trace-warnings --inspect",
     "test": "jest"
   },
